sitio web terminado con toda la información acorde al tema

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO-->
-    <meta name="description" content="Información sobre artistas de la ciudad de Medellín, como el grupo Madera Jazz.">
-    <meta name="keywords" content="Medellín, arte, cultura, artistas, Madera Jazz">
+    <meta name="description"
+        content="Información sobre artistas de la ciudad de Medellín, como el grupo Madera Jazz, Las hermanas Añéz y la cantante María Mulata.">
+    <meta name="keywords" content="Medellín, arte, cultura, artistas, Madera Jazz, Las Añéz, María Mulata.">
     <title>Artistas</title>
     <link rel="shortcut icon" href="../imgs/logo200.png">
     <!-- LINK AOS -->
@@ -79,31 +80,28 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <img src="../imgs/maderaJazz.jpg" class="card-img-top" alt="Grupo Madera Jazz">
+                    <img src="../imgs/hermanasAnez.jpg" class="card-img-top" alt="Grupo Las Añez">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">MADERA JAZZ</h5>
-                        <p class="card-text fs-5 text-black text-center">Grupo joven de Jazz de Medellín, que cada vez
-                            gana más reconocimiento. Su
-                            principal
-                            objetivo es fomentar el Jazz en nuestra ciudad, y a su vez, trasladarlo a lo largo y ancho
-                            del país, haciendo combinaciones de distintos géneros y ritmos. Adicionalmente creando sus
-                            propios temas.</p>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold">LAS AÑEZ</h5>
+                        <p class="card-text fs-5 text-black text-center">Este dúo musical integrado por las hermanas Ana
+                            y María Laura Añez, ha ganado reconocimiento por su propuesta musical que mezcla elementos
+                            del folclor colombiano con la música pop y electrónica. Han lanzado dos álbumes: "El sol
+                            también es una estrella" y "Nómada".</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <img src="../imgs/maderaJazz.jpg" class="card-img-top" alt="Grupo Madera Jazz">
+                    <img src="../imgs/mariaMulata.jpg" class="card-img-top" alt="Cantante Maria Mulata">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">MADERA JAZZ</h5>
-                        <p class="card-text fs-5 text-black text-center">Grupo joven de Jazz de Medellín, que cada vez
-                            gana más reconocimiento. Su
-                            principal
-                            objetivo es fomentar el Jazz en nuestra ciudad, y a su vez, trasladarlo a lo largo y ancho
-                            del país, haciendo combinaciones de distintos géneros y ritmos. Adicionalmente creando sus
-                            propios temas.</p>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold">MARIA MULATA</h5>
+                        <p class="card-text fs-5 text-black text-center">Cantante y compositora de música
+                            afrocolombiana, María Mulata ha sido reconocida por su trabajo en la promoción de la cultura
+                            y la música tradicional de la costa atlántica de Colombia. Su música fusiona elementos de la
+                            cumbia, el bullerengue, el mapalé y otros ritmos tradicionales.</p>
                     </div>
                 </div>
             </div>
