--- a/pages/colectivos.html
+++ b/pages/colectivos.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO-->
     <meta name="description"
-        content="Información sobre colectivos artísticos de la ciudad de Medellín, como del Colectivo el Cuerpo Habla. ">
-    <meta name="keywords" content="Medellín, arte, cultura, colectivos artísticos, Colectivo el Cuerpo Habla">
+        content="Información sobre colectivos artísticos de la ciudad de Medellín, como del Colectivo el Cuerpo Habla, la casa Morada y Teatro Matacandelas. ">
+    <meta name="keywords"
+        content="Medellín, arte, cultura, colectivos artísticos, Colectivo el Cuerpo Habla, Colectivo la Casa Morada, Colectivo Teatro Matacandelas.">
     <title>Colectivos Artísticos</title>
     <link rel="shortcut icon" href="../imgs/logo200.png">
     <!-- LINK AOS -->
@@ -87,36 +88,29 @@
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">EL CUERPO HABLA</h5>
-                        <p class="card-text fs-5 text-black text-center">El Cuerpo Habla nace en el 2003 como una
-                            materia electiva
-                            para los
-                            estudiantes de Artes
-                            Plásticas de la Facultad de Artes de la Universidad de Antioquia. En el 2007 surge el
-                            semillero de
-                            investigación pero se consolida como colectivo artístico independiente en el 2009 por la
-                            necesidad
-                            de inquirir rigurosamente hacia la relación del arte, el cuerpo y la ciudad.</p>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold">LA CASA MORADA</h5>
+                        <p class="card-text fs-5 text-black text-center"> la Casa Morada es un espacio de creación y
+                            producción artística, cultural y social que ofrece una amplia variedad de actividades y
+                            eventos para la comunidad. Su labor en la promoción de la cultura y la educación
+                            artística es muy valorada y su trabajo ha sido reconocido por instituciones
+                            culturales y organizaciones sociales en Colombia y en el extranjero.</p>
                     </div>
-                    <img src="../imgs/colectivoCuerpoHabla.jpg" class="card-img-bottom" alt="Colectivo el Cuerpo Habla">
+                    <img src="../imgs/laCasaMorada.jpg" class="card-img-bottom" alt="Colectivo La Casa Morada">
                 </div>
             </div>
 
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">EL CUERPO HABLA</h5>
-                        <p class="card-text fs-5 text-black text-center">El Cuerpo Habla nace en el 2003 como una
-                            materia electiva
-                            para los
-                            estudiantes de Artes
-                            Plásticas de la Facultad de Artes de la Universidad de Antioquia. En el 2007 surge el
-                            semillero de
-                            investigación pero se consolida como colectivo artístico independiente en el 2009 por la
-                            necesidad
-                            de inquirir rigurosamente hacia la relación del arte, el cuerpo y la ciudad.</p>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold">TEATRO MATACANDELAS</h5>
+                        <p class="card-text fs-5 text-black text-center">el Colectivo Teatro Matacandelas es un
+                            referente del teatro colombiano y un ejemplo de cómo el arte y la cultura pueden ser
+                            utilizados como herramientas de transformación social y cultural. Su trabajo teatral y
+                            pedagógico ha sido un aporte importante a la sociedad colombiana y ha sido reconocido y
+                            valorado en Colombia y en el extranjero.</p>
                     </div>
-                    <img src="../imgs/colectivoCuerpoHabla.jpg" class="card-img-bottom" alt="Colectivo el Cuerpo Habla">
+                    <img src="../imgs/teatroMatacandelas.jpg" class="card-img-bottom"
+                        alt="Colectivo Teatro Matacandelas">
                 </div>
             </div>
         </div>
