--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO-->
     <meta name="description"
-        content="Información sobre eventos de arte de la ciudad de Medellín, por ejemplo el MedeJazz.">
-    <meta name="keywords" content="Medellín, arte, cultura, eventos, MedeJazz">
+        content="Información sobre eventos de arte de la ciudad de Medellín, por ejemplo el MedeJazz, Festitango, Festival Internacional de Poesía de Medellín y el Festival Internacional de Cine de Medellín.">
+    <meta name="keywords"
+        content="Medellín, arte, cultura, eventos, MedeJazz, Festitango, Festival Internacional de Poesía de Medellín, Festival Internacional de Cine de Medellín">
     <title>Eventos</title>
     <link rel="shortcut icon" href="../imgs/logo200.png">
     <!-- LINK AOS -->
@@ -70,7 +71,8 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../imgs/comuna13_2.jpg" class="img-fluid rounded-start" alt="Comuna 13">
+                            <img src="../imgs/jazz.jpg" class="img-fluid rounded-start"
+                                alt="Persona interpretando en MedeJazz">
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
@@ -98,24 +100,24 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../imgs/comuna13_2.jpg" class="img-fluid rounded-start" alt="Comuna 13">
+                            <img src="../imgs/festitango.jpg" class="img-fluid rounded-start"
+                                alt="Bailarines en Festitango">
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">MEDEJAZZ</h5>
-                                <p class="card-text fs-5 text-black text-center mt-2">El Festival internacional de jazz
-                                    de
-                                    Medellín (MedeJazz) es un
-                                    evento de diez días de
-                                    duración que anualmente se realiza en esa ciudad en el mes de septiembre, con
-                                    participación de
-                                    artistas de este género y sus sub-géneros provenientes de varios países del mundo.
-                                    El Festival
-                                    Internacional de jazz de Medellín es un evento que en poco tiempo se ha consolidado
-                                    como
-                                    uno de los más importantes festivales de este género en Colombia, según los
-                                    críticos, músicos y
-                                    aficionados a la música en el país.</p>
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTITANGO</h5>
+                                <p class="card-text fs-5 text-black text-center mt-2">Festitango es un festival de
+                                    música y danza. El festival está dedicado al tango, uno de los géneros musicales más
+                                    populares de
+                                    Argentina, y cuenta con la participación de artistas locales, nacionales e
+                                    internacionales.
+
+                                    Durante el festival, se realizan una serie de actividades como conciertos, milongas,
+                                    clases magistrales, talleres y espectáculos de danza. También se organizan eventos
+                                    especiales como la elección de la reina del tango y la presentación de películas
+                                    relacionadas con el género.
+
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -128,24 +130,19 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../imgs/comuna13_2.jpg" class="img-fluid rounded-start" alt="Comuna 13">
+                            <img src="../imgs/poesia.jpg" class="img-fluid rounded-start"
+                                alt="Evento del Festival Internacional de Poesía De Medellín">
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">MEDEJAZZ</h5>
-                                <p class="card-text fs-5 text-black text-center mt-2">El Festival internacional de jazz
-                                    de
-                                    Medellín (MedeJazz) es un
-                                    evento de diez días de
-                                    duración que anualmente se realiza en esa ciudad en el mes de septiembre, con
-                                    participación de
-                                    artistas de este género y sus sub-géneros provenientes de varios países del mundo.
-                                    El Festival
-                                    Internacional de jazz de Medellín es un evento que en poco tiempo se ha consolidado
-                                    como
-                                    uno de los más importantes festivales de este género en Colombia, según los
-                                    críticos, músicos y
-                                    aficionados a la música en el país.</p>
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTIVAL INTERNACIONAL
+                                    DE POESIA DE MEDELLIN</h5>
+                                <p class="card-text fs-5 text-black text-center mt-2">El Festival Internacional de
+                                    Poesía de Medellín ha logrado reunir a poetas de más de 150 países y ha sido un
+                                    espacio para la difusión de la poesía en diferentes lenguas, así como para el
+                                    intercambio cultural y el diálogo intercultural. El festival se ha convertido en un
+                                    referente mundial de la poesía y de la cultura en general, y ha contribuido a la
+                                    consolidación de Medellín como una ciudad cultural y turística en Colombia.</p>
                             </div>
                         </div>
                     </div>
@@ -156,24 +153,19 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../imgs/comuna13_2.jpg" class="img-fluid rounded-start" alt="Comuna 13">
+                            <img src="../imgs/cine.jpg" class="img-fluid rounded-start"
+                                alt="Evento del Festival Internacional de Cine De Medellín">
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">MEDEJAZZ</h5>
-                                <p class="card-text fs-5 text-black text-center mt-2">El Festival internacional de jazz
-                                    de
-                                    Medellín (MedeJazz) es un
-                                    evento de diez días de
-                                    duración que anualmente se realiza en esa ciudad en el mes de septiembre, con
-                                    participación de
-                                    artistas de este género y sus sub-géneros provenientes de varios países del mundo.
-                                    El Festival
-                                    Internacional de jazz de Medellín es un evento que en poco tiempo se ha consolidado
-                                    como
-                                    uno de los más importantes festivales de este género en Colombia, según los
-                                    críticos, músicos y
-                                    aficionados a la música en el país.</p>
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTIVAL INTERNACIONAL
+                                    DE CINE DE MEDELLIN</h5>
+                                <p class="card-text fs-5 text-black text-center mt-2">El Festival Internacional de Cine
+                                    de Medellín ha sido un gran éxito desde su primera edición, con una creciente
+                                    asistencia de público y una programación cada vez más diversa y atractiva. El
+                                    festival se ha convertido en una plataforma importante para el cine nacional e
+                                    internacional en Colombia, y ha contribuido a posicionar a Medellín como una ciudad
+                                    cultural y turística en el país.</p>
                             </div>
                         </div>
                     </div>
