--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO-->
     <meta name="description"
-        content="Información sobre experiencias artísticas de la ciudad de Medellín, como el tour de la Comuna 13.">
-    <meta name="keywords" content="Medellín, arte, cultura, experiencias, Comuna 13">
+        content="Información sobre experiencias artísticas de la ciudad de Medellín, como el tour de la Comuna 13, el museo de Antioquia y el Teatro Metropolitano.">
+    <meta name="keywords"
+        content="Medellín, arte, cultura, experiencias, Comuna 13, Museo de Antioquia, Teatro Metropolitano">
     <title>Experiencias</title>
     <link rel="shortcut icon" href="../imgs/logo200.png">
     <!-- LINK AOS -->
@@ -71,43 +72,37 @@
                     <h5 class="card-title fs-3 text-center text-primary fw-bold">COMUNA 13</h5>
                     <img src="../imgs/comuna13.jpg" class="card-img-top" alt="Comuna 13 Medellín">
                     <div class="card-body">
-                        <p class="card-text fs-5 text-black text-center">La relación directa que había entre la Comuna
-                            13 y la
-                            violencia, poco
-                            a
-                            poco ha ido quedando atrás, gracias el esfuerzo de su comunidad, especialmente los jóvenes
-                            artistas. Actualmente la han convertido en un sitio totalmente turístico y realmente vale la
-                            pena ir a conocerlo.</p>
+                        <p class="card-text fs-5 text-black text-center"> El tour de la Comuna 13 es una experiencia que
+                            te lleva a través de un barrio vibrante y colorido, que ha
+                            experimentado una transformación significativa en las últimas décadas gracias a iniciativas
+                            gubernamentales y comunitarias que han promovido la inclusión social, el arte y la cultura.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <h5 class="card-title fs-3 text-center text-primary fw-bold">COMUNA 13</h5>
-                    <img src="../imgs/comuna13.jpg" class="card-img-top" alt="Comuna 13 Medellín">
+                    <h5 class="card-title fs-3 text-center text-primary fw-bold">MUSEO DE ANTIOQUIA</h5>
+                    <img src="../imgs/museo-de-antioquia.jpg" class="card-img-top" alt="Museo de Antioquia">
                     <div class="card-body">
-                        <p class="card-text fs-5 text-black text-center">La relación directa que había entre la Comuna
-                            13 y la
-                            violencia, poco
-                            a
-                            poco ha ido quedando atrás, gracias el esfuerzo de su comunidad, especialmente los jóvenes
-                            artistas. Actualmente la han convertido en un sitio totalmente turístico y realmente vale la
-                            pena ir a conocerlo.</p>
+                        <p class="card-text fs-5 text-black text-center">El museo cuenta con una colección permanente
+                            que incluye arte colonial y contemporáneo, así como la mayor colección de obras del famoso
+                            artista colombiano Fernando Botero. Además de su colección permanente, el Museo de Antioquia
+                            también organiza exposiciones temporales que presentan una amplia variedad de temas y
+                            artistas</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <h5 class="card-title fs-3 text-center text-primary fw-bold">COMUNA 13</h5>
-                    <img src="../imgs/comuna13.jpg" class="card-img-top" alt="Comuna 13 Medellín">
+                    <h5 class="card-title fs-3 text-center text-primary fw-bold">TEATRO METROPOLITANO</h5>
+                    <img src="../imgs/metropolitano.jpg" class="card-img-top" alt="Teatro Metropolitano">
                     <div class="card-body">
-                        <p class="card-text fs-5 text-black text-center">La relación directa que había entre la Comuna
-                            13 y la
-                            violencia, poco
-                            a
-                            poco ha ido quedando atrás, gracias el esfuerzo de su comunidad, especialmente los jóvenes
-                            artistas. Actualmente la han convertido en un sitio totalmente turístico y realmente vale la
-                            pena ir a conocerlo.</p>
+                        <p class="card-text fs-5 text-black text-center">El Teatro es uno de los teatros más importantes
+                            y emblemáticos de la ciudad. Este ha sido un importante espacio cultural en
+                            Medellín, acogiendo una amplia variedad de eventos artísticos y culturales, como óperas,
+                            conciertos, espectáculos de danza, teatro, eventos corporativos y otros eventos especiales.
+                        </p>
                     </div>
                 </div>
             </div>
