agregar más animaciones

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -59,7 +59,7 @@
 
         <div class="row">
             <div class="col-12 col-xl-12">
-                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="fade-up"
+                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="zoom-in-up"
                     data-aos-duration="3000">
                     ARTISTAS EN MEDELLÍN</h1>
             </div>
@@ -70,7 +70,8 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <img src="../imgs/maderaJazz.jpg" class="card-img-top" alt="Grupo Madera Jazz">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">MADERA JAZZ</h5>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">MADERA JAZZ</h5>
                         <p class="card-text fs-5 text-black text-center">Grupo joven de Jazz de Medellín, que cada vez
                             gana más reconocimiento. Su
                             principal
@@ -85,7 +86,8 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <img src="../imgs/hermanasAnez.jpg" class="card-img-top" alt="Grupo Las Añez">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">LAS AÑEZ</h5>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">LAS AÑEZ</h5>
                         <p class="card-text fs-5 text-black text-center">Este dúo musical integrado por las hermanas Ana
                             y María Laura Añez, ha ganado reconocimiento por su propuesta musical que mezcla elementos
                             del folclor colombiano con la música pop y electrónica. Han lanzado dos álbumes: "El sol
@@ -97,7 +99,8 @@
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <img src="../imgs/mariaMulata.jpg" class="card-img-top" alt="Cantante Maria Mulata">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">MARIA MULATA</h5>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">MARIA MULATA</h5>
                         <p class="card-text fs-5 text-black text-center">Cantante y compositora de música
                             afrocolombiana, María Mulata ha sido reconocida por su trabajo en la promoción de la cultura
                             y la música tradicional de la costa atlántica de Colombia. Su música fusiona elementos de la
