--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -60,7 +60,7 @@
 
         <div class="row">
             <div class="col-12 col-xl-12">
-                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="fade-up"
+                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="zoom-in-up"
                     data-aos-duration="3000">
                     PRÓXIMOS EVENTOS EN MEDELLÍN</h1>
             </div>
@@ -76,7 +76,8 @@
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">MEDEJAZZ</h5>
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2" data-aos="fade-right"
+                                    data-aos-duration="3000">MEDEJAZZ</h5>
                                 <p class="card-text fs-5 text-black text-center mt-2">El Festival internacional de jazz
                                     de
                                     Medellín (MedeJazz) es un
@@ -105,7 +106,8 @@
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTITANGO</h5>
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2" data-aos="fade-right"
+                                    data-aos-duration="3000">FESTITANGO</h5>
                                 <p class="card-text fs-5 text-black text-center mt-2">Festitango es un festival de
                                     música y danza. El festival está dedicado al tango, uno de los géneros musicales más
                                     populares de
@@ -135,7 +137,8 @@
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTIVAL INTERNACIONAL
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2" data-aos="fade-right"
+                                    data-aos-duration="3000">FESTIVAL INTERNACIONAL
                                     DE POESIA DE MEDELLIN</h5>
                                 <p class="card-text fs-5 text-black text-center mt-2">El Festival Internacional de
                                     Poesía de Medellín ha logrado reunir a poetas de más de 150 países y ha sido un
@@ -158,7 +161,8 @@
                         </div>
                         <div class="col-md-8 ">
                             <div class="card-body m-2 p-2">
-                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2">FESTIVAL INTERNACIONAL
+                                <h5 class="card-title fs-3 text-center text-primary fw-bold m-2" data-aos="fade-right"
+                                    data-aos-duration="3000">FESTIVAL INTERNACIONAL
                                     DE CINE DE MEDELLIN</h5>
                                 <p class="card-text fs-5 text-black text-center mt-2">El Festival Internacional de Cine
                                     de Medellín ha sido un gran éxito desde su primera edición, con una creciente
