--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -60,7 +60,7 @@
 
         <div class="row">
             <div class="col-12 col-xl-12">
-                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="fade-up"
+                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="zoom-in-up"
                     data-aos-duration="3000">
                     EXPERIENCIAS DE ARTE EN MEDELLÍN</h1>
             </div>
@@ -69,7 +69,8 @@
         <div class="row">
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <h5 class="card-title fs-3 text-center text-primary fw-bold">COMUNA 13</h5>
+                    <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                        data-aos-duration="3000">COMUNA 13</h5>
                     <img src="../imgs/comuna13.jpg" class="card-img-top" alt="Comuna 13 Medellín">
                     <div class="card-body">
                         <p class="card-text fs-5 text-black text-center"> El tour de la Comuna 13 es una experiencia que
@@ -82,20 +83,22 @@
             </div>
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <h5 class="card-title fs-3 text-center text-primary fw-bold">MUSEO DE ANTIOQUIA</h5>
+                    <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                        data-aos-duration="3000">MUSEO DE ANTIOQUIA</h5>
                     <img src="../imgs/museo-de-antioquia.jpg" class="card-img-top" alt="Museo de Antioquia">
                     <div class="card-body">
                         <p class="card-text fs-5 text-black text-center">El museo cuenta con una colección permanente
                             que incluye arte colonial y contemporáneo, así como la mayor colección de obras del famoso
-                            artista colombiano Fernando Botero. Además de su colección permanente, el Museo de Antioquia
+                            artista colombiano Fernando Botero. Además de esta, el Museo de Antioquia
                             también organiza exposiciones temporales que presentan una amplia variedad de temas y
-                            artistas</p>
+                            artistas.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
-                    <h5 class="card-title fs-3 text-center text-primary fw-bold">TEATRO METROPOLITANO</h5>
+                    <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                        data-aos-duration="3000">TEATRO METROPOLITANO</h5>
                     <img src="../imgs/metropolitano.jpg" class="card-img-top" alt="Teatro Metropolitano">
                     <div class="card-body">
                         <p class="card-text fs-5 text-black text-center">El Teatro es uno de los teatros más importantes
