--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid mainIndex">
             <div class="row">
                 <div class="col-12 col-xl-12">
-                    <h1 class="text-center fs-1 fw-bold text-primary m-2 p-2 " data-aos="fade-up"
+                    <h1 class="text-center fs-1 fw-bold text-primary m-2 p-2 " data-aos="zoom-in-up"
                         data-aos-duration="3000">MEDELLÍN ES ARTE</h1>
                 </div>
             </div>
@@ -90,7 +90,7 @@
 
             <div class="row">
                 <div class="col-12 col-xl-12">
-                    <h1 class="text-center fs-1 fw-bold text-primary m-2 p-2 " data-aos="fade-up"
+                    <h1 class="text-center fs-1 fw-bold text-primary m-2 p-2 " data-aos="zoom-in-up"
                         data-aos-duration="3000">
                         SOBRE MEDELLÍN</h1>
                 </div>
