--- a/pages/colectivos.html
+++ b/pages/colectivos.html
@@ -60,7 +60,7 @@
 
         <div class="row">
             <div class="col-12 col-xl-12">
-                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="fade-up"
+                <h1 class="text-center fs-1 fw-bold text-primary mb-3 pb-3 " data-aos="zoom-in-up"
                     data-aos-duration="3000">
                     COLECTIVOS ARTÍSTICOS EN MEDELLÍN</h1>
             </div>
@@ -70,7 +70,8 @@
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">EL CUERPO HABLA</h5>
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">EL CUERPO HABLA</h5>
                         <p class="card-text fs-5 text-black text-center">El Cuerpo Habla nace en el 2003 como una
                             materia electiva
                             para los
@@ -88,11 +89,12 @@
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">LA CASA MORADA</h5>
-                        <p class="card-text fs-5 text-black text-center"> la Casa Morada es un espacio de creación y
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">LA CASA MORADA</h5>
+                        <p class="card-text fs-5 text-black text-center"> La Casa Morada es un espacio de creación y
                             producción artística, cultural y social que ofrece una amplia variedad de actividades y
-                            eventos para la comunidad. Su labor en la promoción de la cultura y la educación
-                            artística es muy valorada y su trabajo ha sido reconocido por instituciones
+                            eventos para la comunidad. Su labor es la promoción de la cultura y la educación
+                            artística. Su trabajo ha sido reconocido por instituciones
                             culturales y organizaciones sociales en Colombia y en el extranjero.</p>
                     </div>
                     <img src="../imgs/laCasaMorada.jpg" class="card-img-bottom" alt="Colectivo La Casa Morada">
@@ -102,8 +104,9 @@
             <div class="col-12 col-xl-4">
                 <div class="card mb-5" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card-body">
-                        <h5 class="card-title fs-3 text-center text-primary fw-bold">TEATRO MATACANDELAS</h5>
-                        <p class="card-text fs-5 text-black text-center">el Colectivo Teatro Matacandelas es un
+                        <h5 class="card-title fs-3 text-center text-primary fw-bold" data-aos="fade-right"
+                            data-aos-duration="3000">TEATRO MATACANDELAS</h5>
+                        <p class="card-text fs-5 text-black text-center">El Colectivo Teatro Matacandelas es un
                             referente del teatro colombiano y un ejemplo de cómo el arte y la cultura pueden ser
                             utilizados como herramientas de transformación social y cultural. Su trabajo teatral y
                             pedagógico ha sido un aporte importante a la sociedad colombiana y ha sido reconocido y
